# Squick-Unity-Demo

./: .gitignore  README.md
Docs/: QuickStart.md
Docs/Knowledge/: BasicIntro.md
Sdk/android-lib/: settings.gradle
Server/: .gitignore  README.md
Server/docs/: README.md  快速搭建.md  服务架构.md  调试.md
Server/src/: CMakeLists.txt
Server/src/server/micro/email/: CMakeLists.txt
Server/src/server/micro/pvp/: CMakeLists.txt
Server/tools/: build_all.sh  build_squick.sh  build_third_party.bat  build_third_party.sh  clean_squick.bat  generate_config.bat  generate_config.sh  generate_vs_project.bat  proto2code.bat  proto_to_lua_str.py  startall.bat  startall.sh  stopall.sh  upload_to_server.sh
Unity/: .gitignore  Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  ILRuntime.csproj  Malee.ReorderableList.Editor.csproj  Malee.ReorderableList.csproj  README.md  UniWebView-CSharp.Editor.csproj  UniWebView-CSharp.csproj  Unity.sln  Uquick.sln  WebSocketSharp.csproj  upload.sh
Unity/Assets/: AppStart.unity  Init.unity  link.xml
Unity/HotScripts/: BPath.cs  HotScripts.csproj  HotScripts.sln  Program.cs
Unity/HotUpdateScripts/: BPath.cs  CommonUI.cs  HotUpdateScripts.csproj  HotUpdateScripts.csproj.DotSettings  HotUpdateScripts.sln  Program.cs  输出-生成.txt
Unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset
Unity/UIElementsSchema/: Unity.UI.Builder.xsd  UnityEditor.PackageManager.UI.Internal.xsd  (+1 more)
(+1238 files in other folders)
